--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Pepper Diaries
+description: Pepper diaries by nebdots. Growing Carolina Reapers for the first time in 2020.
